tests/ui/nonliteral-duplicate.stderr
error[E0081]: discriminant value `1` assigned more than once
  --> tests/ui/nonliteral-duplicate.rs:24:1
   |
24 | enum NonLiteralDuplicateVariant {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
25 |     A = 1,
   |         - `1` assigned here
26 |     B = 2,
27 |     C = ONE,
   |         --- `1` assigned here

error[E0081]: discriminant value `1` assigned more than once
  --> tests/ui/nonliteral-duplicate.rs:31:1
   |
31 | enum NonLiteralImplicitDuplicateVariant {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
32 |     A = ONE,
   |         --- `1` assigned here
33 |     B = 0,
   |     - discriminant for `C` incremented from this startpoint (`B` + 1 variant later => `C` = 1)
34 |     C,
   |     - `1` assigned here
